fix: illustrations margins + teamb page grid gap

--- a/styles/page-content.scss
+++ b/styles/page-content.scss
@@ -73,6 +73,7 @@
     @include media-breakpoint-up(lg) {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 70px 1fr;
+      grid-column-gap: 20px;
       h1 {
         grid-column: 1 / span 2;
         margin: 0;
@@ -161,6 +162,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-top: 30px;
+    @include media-breakpoint-up(md) {
+    }
   }
   &__rightFragment {
     position: absolute;
@@ -311,13 +315,15 @@
   }
   &__contactBlock_exhibition {
     @include media-breakpoint-up(lg) {
-      margin: 0 !important;
+      bottom: 90px !important;
     }
     @include media-breakpoint-up(xl) {
+      bottom: 30px !important;
       margin-bottom: -20px !important;
     }
-    @include media-breakpoint-up(lg) {
-      margin-bottom: -45px !important;
+    @include media-breakpoint-up(xxl) {
+      bottom: -10px !important;
+      margin: 0;
     }
   }
 }
